--- a/src/App.css
+++ b/src/App.css
@@ -10,29 +10,30 @@
 .color {
     background-color: #1B3764;
     min-height: 100vh;
+    padding-bottom: 30px;
 }
 
-.color .content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+ .content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+    background-color: #1B3764;
     padding: 12px;
-    margin-bottom: 12px;
-}
+  }
 
-.color .content .content-left {
+.content .content-left {
     display: flex;
     align-items: center;
     gap: 15px;
 }
 
-.color .content .main-img {
+ .content .main-img {
     display: flex;
     gap: 10px;
     color: white;
 }
 
-.color .content-right {
+ .content-right {
     display: flex;
     padding: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -68,15 +69,13 @@
 }
 
 .color .program {
-    width: 635px;
-    height: 110px;
     font-weight: 700;
-    font-size: 50px;
+    font-size: 45px;
     line-height: 55px;
     letter-spacing: -2%;
     color: white;
     margin: auto auto;
-    margin-top: 10%;
+    /* margin-top: 10%; */
 }
 
 .color .program .main-span span {
@@ -139,7 +138,6 @@
     display: none;
 }
 
-/* //////////////////////////////////////////////////// */
 .info {
     background-color: #1B3764;
     padding: 100px 0;
@@ -148,7 +146,6 @@
   .info .container {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     max-width: 100%;
     flex-wrap: wrap;
   }
@@ -257,7 +254,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
-  /* //////////////////////////////////////////////767 */
+
 
 
 @media (max-width: 980px) {
@@ -292,20 +289,23 @@
     .content-right nav {
       display: none;
     }
+
+    .content {
+      display: block;
+    }
   
     .menu-btn {
-      display: block;    
+      display: block;   
+      margin-left: auto; 
+      cursor: pointer;
     }
   
     .open-menu {
       display: block;
+
     }
 
-    .content .content-left{
-        display: none;
-    }
-
-    .content-right.nav-active nav {
+    .content.nav-active nav {
         display: flex;
         flex-direction: column;
       }
@@ -318,11 +318,11 @@
       display: none;
     }
   
-    .content-right.nav-active .open-menu {
+    .content.nav-active .open-menu {
       display: none;
     }
   
-    .content-right.nav-active .close-menu {
+    .content.nav-active .close-menu {
       display: block;
     }
   }
